welcome.lessons.welcome.methods.slug.SlugTracking.scala.code
def isFacingTrail():Boolean = {
    var couleur:Boolean = Color.green
avance()

	if(couleur = getCouleurSol() == Color.green)
{
	avance()
	}
	return couleur
}        
